--- a/pom.xml
+++ b/pom.xml
@@ -15,13 +15,15 @@
 		<maven.compiler.source>12</maven.compiler.source>
 		<maven.compiler.target>12</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<junit.version>3.8.1</junit.version>
+		<maven-compiler.version>3.8.1</maven-compiler.version>
 	</properties>
 
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
+			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
@@ -32,12 +34,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
-					<version>3.8.1</version>
-					<configuration>
-						<source>12</source>
-						<target>12</target>
-						<encoding>UTF-8</encoding>
-					</configuration>
+					<version>${maven-compiler.version}</version>
 				</plugin>
 			</plugins>
 		</pluginManagement>
