--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,8 @@
 		<maven.compiler.source>12</maven.compiler.source>
 		<maven.compiler.target>12</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<junit.version>3.8.1</junit.version>
+		<junit.version>4.12</junit.version>
+		<log4j.version>1.2.17</log4j.version>
 		<maven-compiler.version>3.8.1</maven-compiler.version>
 	</properties>
 
@@ -25,6 +26,11 @@
 			<artifactId>junit</artifactId>
 			<version>${junit.version}</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>${log4j.version}</version>
 		</dependency>
 	</dependencies>
 
